Removed useless margins for body; Fixed text overlapping for result item

--- a/src/components/AutoComplete/AutoComplete.scss
+++ b/src/components/AutoComplete/AutoComplete.scss
@@ -37,6 +37,9 @@ $autocomplete-height: 40px;
 
   &-result {
     padding: 5px 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     &_empty {
       padding: 5px 10px;
